--- a/endereco.html
+++ b/endereco.html
@@ -13,6 +13,9 @@
     <section class="row">
       <div class="col">
           <article class="card card-body">
+            <div class="alert alert-danger" role="alert">
+              Opa! Preencha os dados corretamente.
+            </div>
             <form  method="post">
               <label for="cep">CEP</label><br>
               <input class="form-control" id="cep" type="text" placeholder="Ex: 99999999">
@@ -43,7 +46,6 @@
           <img src="img/add.svg" width="100%">
       </div>
     </section>
-
-
+    <script src="js/validar.js" charset="utf-8"></script>
   </body>
 </html>
