--- a/endereco.html
+++ b/endereco.html
@@ -13,10 +13,10 @@
     <section class="row">
       <div class="col">
           <article class="card card-body">
-            <div class="alert alert-danger" role="alert">
+            <div class="alert alert-danger" id="msg-erro" role="alert" style="display: none;">
               Opa! Preencha os dados corretamente.
             </div>
-            <form  method="post">
+            <form  method="post" onsubmit="validarForm()">
               <label for="cep">CEP</label><br>
               <input class="form-control" id="cep" type="text" placeholder="Ex: 99999999">
               <br>
@@ -43,7 +43,7 @@
           </article>
       </div>
       <div class="col">
-          <img src="img/add.svg" width="100%">
+          <img src="img/endereco.svg" width="100%">
       </div>
     </section>
     <script src="js/validar.js" charset="utf-8"></script>
